2003-10-16  Peter Bergner  <bergner@vnet.ibm.com>

	* configure.in: Set em=linux for ppc-*-linux-gnu* target.
	* configure: Regenerate.

2003-10-15  Alan Modra  <amodra@bigpond.net.au>

	* doc/as.texinfo (Align): Correct list of byte targets.

2003-10-15  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (macro_build_ldst_constoffset,load_register,macro):
	Fix indentation. Better error message.

2003-10-14  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (xtensa_create_property_segments): Remove bfd
	argument in call to xtensa_get_property_section_name.  Formatting.

2003-10-11  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* config/tc-sh.h (sh_coff_reloc_mangle): Delete an extra
	parenthesis.

2003-10-11  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* config/tc-sh.c: Convert to ISO C90.  Remove unnecessary
	prototypes and casts.
	* config/tc-sh.h: Likewise.
	* config/tc-sh64.c: Likewise.
	* config/tc-sh64.h: Likewise.

2003-10-08  Dave Brolley  <brolley@redhat.com>

	* config/tc-frv.c (fr550_check_insn_acc_range): New function.
	(fr550_check_acc_range): New function.
	(md_assemble): Call fr550_check_acc_range.

2003-10-08  Dave Brolley  <brolley@redhat.com>

	* config/tc-frv.c: Handle DEFAULT_CPU_FR550.
	(md_parse_option): Handle OPTION_CPU==fr550.
	(md_show_usage): Document fr550.

2003-10-08  Philippe De Muyter  <phdm@macqel.be>

	* as.c (use_gnu_debug_info_extensions) : New variable.
	(parse_args) : Accept new --gstabs+ option, and set
	`use_gnu_debug_info_extensions'.
	(show_usage) : Document --gstabs+ option.
	* as.h (use_gnu_debug_info_extensions) : New extern declaration.
	* stabs.c (stabs_generate_asm_file) : If
	`use_gnu_debug_info_extensions' is set, add the compilation
	directory to the stabs debug info.
	* doc/as.texinfo : Document --gstabs+ option.
	* NEWS: Mention new feature.

2003-10-06  Matt Thomas  <matt@3am-software.com>

	Switch NetBSD/hppa to use Linux PA-RISC ELF ABI and
	assembler syntax.
